fixed misaligned embeds in the post editor

--- a/styles/editor-style.css
+++ b/styles/editor-style.css
@@ -243,7 +243,7 @@ img figcaption,
 }
 
 .wp-block-embed {
-  margin: 1.5em 0;
+  margin: 1.5em auto;
 }
 
 .has-small-font-size {
